src/docutilsrs/tests/snapshots/parser__multi_line_paragraph.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        line one
        line two
        line three
