src/docutilsrs/tests/snapshots/parser__no_nesting.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        <strong>
            bold and *italic* inside
