src/docutilsrs/tests/snapshots/parser__plain_role_no_domain.snap
---
source: src/docutilsrs/tests/parser.rs
assertion_line: 255
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        <emphasis>
            text
