src/docutilsrs/tests/snapshots/parser__reference_resolved.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        See 
        <reference name="ref" refuri="http://example.com">
            ref
        .
    <target ids="ref" names="ref" refuri="http://example.com">
