src/docutilsrs/tests/snapshots/parser__rst_directive_full_signature.snap
---
source: src/docutilsrs/tests/parser.rs
assertion_line: 208
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <object_description classes="rst directive" ids="directive-attention" sig=".. attention::">
        <paragraph>
            An attention admonition.
