src/docutilsrs/tests/snapshots/parser__rst_role.snap
---
source: src/docutilsrs/tests/parser.rs
assertion_line: 214
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <object_description classes="rst role" ids="role-ref" sig=":ref:">
        <paragraph>
            Cross-reference an arbitrary location.
