src/docutilsrs/tests/snapshots/parser__single_paragraph.snap
---
source: docutilsrs/tests/parser.rs
expression: "pseudo_xml(&parse_rst(\"Hello world.\"))"
---
<document source="<string>">
    <paragraph>
        Hello world.
