src/docutilsrs/tests/snapshots/parser__two_paragraphs.snap
---
source: docutilsrs/tests/parser.rs
expression: "pseudo_xml(&parse_rst(\"First.\\n\\nSecond.\"))"
---
<document source="<string>">
    <paragraph>
        First.
    <paragraph>
        Second.
